0.2.4	fixed compiler macro misplacement (github#4).

	fixed invalid free (github#5).

	fixed invalid memset(0) in ps_close().

	added python binding, not enabled by default,
	use --with-python-binding to turn it on.

	certain generated files are no more generated by
	autogen.sh, but manually by myself and put into
	git, because the generation isn't portable. also
	fixes github#3.

	disabled conftests when cross compiling.


0.2.3   Z85 block encoding changed. 4 bytes are appended
	to each input block to denote if and how many
	zeroes have been used for padding, necessary
	since z85 doesn't have any native padding scheme,
	and only padding with zeroes is insuffucient. This
	change breaks - currently - compatibility to pbp.

	Added new option --anonymous (-A) which uses a
	generated keypair for encryption and puts the
	public part into the encrypted message.

	Fixed lots of memory leaks.

0.2.2   Enhanded --edit-key a little, it's now possible to
	make a secret the primary one.

	Added new option -v (the previous -v has moved to
	--version only) for verbose. Currently only supported
	by --list-keys. In this mode more details will be
	printed. Also added a couple of alias options for
	existing ones (e.g. -a for armor which is an alias
	for -z).

	Removed options -P and -S, replaced by -K (long:
	--import-key) used to import a key. The key type
	is now determined automatically as well as the
	encoding.

	Made libpcp threadsafe by removing all global vars
	and putting that stuff into the new PCP Context
	class (ptx.h), which now holds errors and key hashes.

	Use 64bit integers for time values in exported
	keys (we use 64 bit internaly already), to be
	year 2038 safe.

	Added a new file type (PCP_ASYM_CIPHER_SIG) which
	marks encrypted+signed files. This is incompatible
	to pbp, but it doesn't support that feature anyway.
	To decrypt encrypted+signed files the option -c
	is therefore no more required, since pcp2 can now
	determine the file mode itself.
