@@ -19,10 +19,8 @@ extern "C" {
 #include "pcp/key.h"
 #include "pcp/keyhash.h"
 #include "pcp/keysig.h"
-#include "pcp/mac.h"
 #include "pcp/mem.h"
 #include "pcp/mgmt.h"
-#include "pcp/pad.h"
 #include "pcp/pcpstream.h"
 #include "pcp/platform.h"
 #include "pcp/plist.h"
