@@ -26,7 +26,7 @@ lib_LTLIBRARIES      = libpcp1.la
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libpcp1.pc
 
-libpcp1_la_SOURCES = platform.c mac.c mem.c pad.c version.c \
+libpcp1_la_SOURCES = platform.c  mem.c version.c \
 		    context.c z85.c zmq_z85.c key.c randomart.c \
 		    vault.c jenhash.c digital_crc32.c \
                     crypto.c ed.c keyhash.c scrypt.c \
